# kafka-manager

./: .gitignore  API.md  API_UNIFIED.md  Cargo.toml  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OFFSET_EXPLORER_COMPARISON.md  README-cn.md  README.md  SSE_STREAMING_FEATURE.md  TAURI_README.md  TODO.md  TOPIC_REFRESH_FEATURE.md  UI_REPLICATION_PLAN.md  WINDOWS_BUILD_GUIDE.md  config.toml  kafka_manager.db-shm  kafka_manager.db-wal  kafka_manager.db.old_corrupted  send_chat_messages.py  start-dev.sh  start-server.sh  start-tauri-dev.sh
.claude/skills/: consumer-group-last-commit-time.md  message-query-design.md  mobile-ui-adaptation.md  query-message.md  sse-streaming.md  topic-navigation.md  translate.md  unified-modal-style.md  version-update.md
.github/workflows/: build.yml
app/: Cargo.toml
app/locales/: en.json  zh.json
app/src/: backend.rs  i18n.rs  main.rs  service.rs  state.rs  tray.rs  updater.rs  workspace.rs
app/src/components/: mod.rs  navigator.rs  option_select.rs  tree_navigator.rs
app/src/pages/: clusters.rs  consumer_groups.rs  favorites.rs  messages.rs  mod.rs  schema_registry.rs  settings.rs  topic_consumer_groups.rs  topics.rs
docs/: API_EXAMPLES.md  DOCUMENTATION_INDEX.md  OPTIMIZATIONS.md  TODO.md  api-cn.md  api.md  architecture-cn.md  architecture.md  cluster_connection_api.md  gpui-plan.md  gpui-spec.md  message-query-design.md
examples/: dbg_topic_list.rs  send-chat-messages.rs  send-meteorology-messages.rs  send-stock-messages.rs
gpui-app/: Cargo.toml  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md
gpui-app/src/: app.rs  build_config.rs  main.rs  shortcuts.rs
gpui-app/src/api/: client.rs  mod.rs  sse.rs  sse_handler.rs  types.rs
gpui-app/src/i18n/: mod.rs  translations.rs
gpui-app/src/router/: mod.rs  router.rs
gpui-app/src/state/: app_state.rs  cluster_state.rs  favorites_state.rs  global_state.rs  message_buffer.rs  mod.rs
gpui-app/src/tour/: definitions.rs  mod.rs
gpui-app/src/ui/: mod.rs
gpui-app/src/ui/components/: button.rs  cluster_tree_navigator.rs  confirm_dialog.rs  create_topic_dialog.rs  delete_topic_dialog.rs  favorite_button.rs  input.rs  json_editor.rs  json_highlight_selector.rs  language_selector.rs  message_detail_panel.rs  message_query_tool.rs  mobile_card_view.rs  mobile_search_drawer.rs  mod.rs  modal.rs  navigator_search.rs  navigator_status_bar.rs  send_message_modal.rs  sent_message_history.rs  sse_stream_manager.rs  theme_selector.rs  toast.rs  topic_favorites.rs  topic_history.rs  topic_list_view.rs  topic_navigator.rs  virtual_list.rs
gpui-app/src/ui/components/context_menus/: cluster_context_menu.rs  mod.rs  partition_context_menu.rs  topic_context_menu.rs  topics_folder_context_menu.rs
gpui-app/src/ui/icons/: mod.rs
gpui-app/src/ui/layout/: left_sidebar.rs  main_content.rs  mod.rs  responsive_layout.rs  top_nav_bar.rs
gpui-app/src/ui/theme/: mod.rs  theme_state.rs
gpui-app/src/ui/views/: clusters_view.rs  consumer_groups_view.rs  favorites_view.rs  messages_view.rs  mod.rs  schema_registry_view.rs  settings_view.rs  topic_consumer_groups_view.rs  topics_view.rs
gpui-app/src/utils/: export_import.rs  format.rs  mod.rs  time.rs
migrations/: 001_add_indexes.sql  001_create_kafka_clusters.sql  002_add_topic_metadata_indexes.sql  003_add_cluster_groups.sql  004_create_consumer_group_metadata.sql  005_add_last_commit_time_to_consumer_group_offsets.sql  006_create_consumer_group_lag_history.sql  006_create_topic_history.sql  007_create_sent_messages.sql
old-backend/axum/: cluster.rs  json_highlight.rs  settings.rs  unified.rs
old-ui/vue/: index.html  vite.config.ts
patches/: rdkafka-sys-build.patch
rdkafka-sys-local/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  build.rs  changelog.md
src/: api.rs  api_import_export.rs  config.rs  error.rs  lib.rs  main.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: installer.nsh
src-tauri/src/: api_commands.rs  lib.rs  main.rs
src/cache/: mod.rs
src/db/: api_key.rs  audit_log.rs  cluster.rs  cluster_connection.rs  cluster_group.rs  consumer_group.rs  favorite.rs  json_highlight.rs  mod.rs  notification.rs  schema_registry.rs  sent_message.rs  settings.rs  tag.rs  topic.rs  topic_history.rs  topic_template.rs  user.rs
src/kafka/: admin.rs  avro.rs  consumer.rs  consumer_group.rs  import_export.rs  message_format.rs  message_query.rs  mod.rs  offset.rs  producer.rs  protobuf.rs  schema.rs  schema_registry.rs  schema_registry_client.rs  throughput.rs  transaction.rs
src/middleware/: audit.rs  auth.rs  mod.rs  performance.rs  rate_limit.rs
src/models/: mod.rs  schema_registry.rs
src/pool/: kafka_consumer.rs  kafka_producer.rs  mod.rs
src/routes/: audit_log.rs  auth.rs  cluster.rs  cluster_connection.rs  cluster_group.rs  cluster_monitor.rs  cluster_stats.rs  consumer_group.rs  favorite.rs  health.rs  message.rs  message_query.rs  messages.rs  mod.rs  notification.rs  schema.rs  schema_registry.rs  settings.rs  tag.rs  topic.rs  unified.rs  (+3 more)
tests/: api_test.rs
ui/: .env.example  README.md  index.html  main_window.slint  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui-slint/: Cargo.toml  MIGRATION_SUMMARY.md  PACKAGING.md  README.md  build.rs
ui-slint/src/: app.slint  app_new.slint  async_ops.rs  i18n.rs  i18n_test.rs  lib.rs  main.rs  test_new_layout.rs  theme.slint
ui-slint/src/components/: badge.slint  card.slint  consumer_group_list.slint  context_menu.slint  icons.slint  message_list.slint  modal.slint  search.slint  sidebar.slint  sidebar_new.slint  toast.slint  top_nav_bar.slint  topic_list.slint  virtual_list.slint
ui-slint/src/handlers/: cluster.rs  consumer_group.rs  consumer_group_detail.rs  message.rs  mod.rs  phase11.rs  settings.rs  topic.rs  topic_crud.rs
ui-slint/src/models/: cluster.rs  consumer_group.rs  message.rs  mod.rs  topic.rs
ui-slint/src/views/: clusters_view.slint  main_layout.slint  messages.slint  messages_view_new.slint  settings.slint  topics_view.slint
(+128 files in other folders)
