[package]
name = "kafka-manager-api"
version = "0.1.0"
edition = "2021"
description = "A Kafka management tool with RESTful API"

[workspace]
members = ["src-tauri"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "compression-br", "compression-zstd", "timeout"] }

# Kafka client
rdkafka = { version = "0.39", features = ["cmake-build"] }

# HTTP client for Schema Registry
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
bcrypt = "0.15"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Connection pooling
deadpool = "0.12"
deadpool-runtime = "0.1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Futures utilities
futures = "0.3"
tokio-stream = "0.1"

# UUID for task IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Testing
[dev-dependencies]
mockall = "0.13"
rstest = "0.24"
tokio-test = "0.4"
