[package]
name = "kafka-manager-api"
version = "1.1.54"
edition = "2021"
description = "A Kafka management tool with RESTful API"

[workspace]
members = ["src-tauri"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "compression-br", "compression-zstd", "timeout"] }

# Kafka client
rdkafka = { version = "0.39", features = ["cmake-build"] }

# HTTP client for Schema Registry
reqwest = { version = "0.11", features = ["json"] }

# Avro 编解码
apache-avro = "0.17"

# Protobuf 编解码
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
bcrypt = "0.15"
rand = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "mysql"] }

# System information for telemetry
whoami = "1.5"
local-ip-address = "0.6"
urlencoding = "2.1"

# Connection pooling
deadpool = { version = "0.12", features = ["managed", "rt_tokio_1"] }


# Futures utilities
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"

# Zero-copy bytes
bytes = "1.5"

# Lock-free Arc for AppState
arc-swap = "1.7"
dirs = "6.0.0"

# Testing
[dev-dependencies]
mockall = "0.13"
rstest = "0.24"
tokio-test = "0.4"
