[package]
name = "kafka-manager-app"
version = "1.1.64"
edition = "2021"
description = "Kafka Manager desktop app (GPUI)"

[dependencies]
# UI
gpui = "0.2.2"
gpui-component = "0.5.1"

# Core business library
kafka-manager-api = { path = ".." }

# Async & utils
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
arc-swap = "1.7"
dirs = "6"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
rfd = "0.15"

# 自动更新
reqwest = { version = "0.12", features = ["json", "stream"] }
semver = "1"
zip = "2"
futures = "0.3"

# 桌面集成
tray-icon = "0.19"
auto-launch = "0.5"
single-instance = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
