[package]
name = "kafka-manager-gpui"
version = "0.1.0"
edition = "2021"
description = "Kafka Manager rebuilt with GPUI"
authors = ["Zhu Zhanquan <zufar@example.com>"]

[dependencies]
# GPUI framework - from Zed repository
# Note: GPUI is not yet published to crates.io, we use git dependency
gpui = { git = "https://github.com/zed-industries/zed.git", rev = "b0911ccc9e8bb2b9eab4cc53ec2c98b0471e2759" }
gpui_platform = { git = "https://github.com/zed-industries/zed.git", rev = "b0911ccc9e8bb2b9eab4cc53ec2c98b0471e2759" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-channel = "2"

# UUID for unique identifiers
uuid = { version = "1", features = ["v4"] }

# For settings persistence
directories = "5"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific

[target.'cfg(target_os = "windows")'.dependencies]
# Windows specific

[target.'cfg(target_os = "linux")'.dependencies]
# Linux specific

[build-dependencies]
# None for now

[features]
default = []

# Workspace configuration
[workspace]