[package]
name = "kafka-manager"
version = "0.1.0"
description = "A Kafka management tool built with Tauri 2"
authors = ["your name"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"

# 后端依赖
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
rdkafka = { version = "0.39", features = ["tokio"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
bcrypt = "0.17"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

# 引用主项目的 kafka-manager-api
kafka-manager-api = { path = ".." }

# 目录工具
dirs = "5"

# Lock-free Arc for AppState
arc-swap = "1.7"
